[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "llm-sdk",
    "mypy>=1.19.1",
    "numpy>=2.4.3",
    "pep8-naming>=0.15.1",
    "pydantic>=2.12.5",
]
# flake8-docstrings　後で入れる

# PyTorchのCPU版をインストール
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

[tool.uv.sources]
# torch = { index = "pytorch-cpu" }
llm-sdk = { workspace = true }

# llm_sdkの中のpyproject.tomlの内容も含める
[tool.uv.workspace]
members = [
    "llm_sdk",
]


[tool.mypy]
exclude = [
    "^llm_sdk/",
    "^\\.venv/",
]
# .関数はAnyで返せなくなる
warn_return_any = true

# .type: ignoreを警告する
warn_unused_ignores = true

# .外部ライブラリは検証外にする
ignore_missing_imports = true

# .型ヒントのない関数を警告する
disallow_untyped_defs = true

# .型ヒントのない関数の中身を検証する
check_untyped_defs = true

# strict = true
